# URDF

./: CMakeLists.txt  README.md  my_robot.urdf  package.xml  pythonfinal  setup.py
config/: nav2_params.yaml  realsense_frames.yaml
launch/: robot.launch.py
launch_files/: master.launch.py  my_realsense.launch.py  my_rtabmap.launch.py  nav2_bringup.launch.py  robot.launch.py
meshes/: chassis.dae
meshes/dae/: NEW DESIGN Straight.dae
phobosexp/nazifbot/meshes/dae/: NEW DESIGN Straight.dae
phobosexp/nazifbot/urdf/: myrobot.urdf
urdf/: my_robot.urdf
